[package]
name = "changed-files-rs"
version = "0.1.3"
authors = ["zcong1993 <zhangcong1992@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zcong1993/changed-files-rs"
description = "Rust port jest-changed-files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
subprocess = "0.2.6"
regex = "1"
